--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=7d8509737e3cd2a4249eb3e20ace5cf4
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL=mysql://root:@localhost:3306/symfony_tp5?serverVersion=10.4.28-MariaDB
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
